[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-learning"
version = "0.3.0"
description = "CLI: estimate workload from numeric fields extracted from PDFs (material proxy)"
requires-python = ">=3.10"
dependencies = ["pdfplumber>=0.11"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "fpdf2>=2.8"]

[project.scripts]
workload = "workload_app.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
